Create a Footer.js file in the components folder, create also a Footer.module.css file in the styles folder

--- a/src/styles/BookingComponent.module.css
+++ b/src/styles/BookingComponent.module.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     text-align: center;
     font-family: 'Helvetica Neue', sans-serif;
+    padding-bottom: 90px;
 }
 
 .calendarHeader {
