--- a/src/styles/AllCars.module.css
+++ b/src/styles/AllCars.module.css
@@ -3,7 +3,7 @@
 .allCarsContainer {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 2rem;
+    padding: 2rem 2rem 5rem;
     text-align: center;
   }
   
