--- a/src/styles/AboutUs.module.css
+++ b/src/styles/AboutUs.module.css
@@ -1,8 +1,21 @@
+.image-container {
+    width: 100%;
+    height: 50vh;
+    overflow: hidden;
+}
+
+.background-image {
+    width: 100%;
+    height: auto;
+}
+
 .about-us-container {
     max-width: 800px;
-    margin: 0 auto;
+    margin: 20px auto;
     padding: 40px;
-    background-color: #f9f9f9;
+    position: relative;
+    z-index: 1;
+    background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
@@ -22,18 +35,16 @@
     color: #555;
 }
 
-.about-us-content p {
-    margin: 15px 0;
-}
-
 /* Achievements Section */
 .achievements-section {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
-    margin: 40px auto;
+    margin: 10px auto; /* Margin around achievements section */
     max-width: 800px;
+    margin-bottom: 100px; /* Added margin below to prevent overlap with the footer */
 }
+
 
 .achievement {
     background-color: #ffffff;
