--- a/src/styles/AboutUs.module.css
+++ b/src/styles/AboutUs.module.css
@@ -40,9 +40,9 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
-    margin: 10px auto; /* Margin around achievements section */
+    margin: 10px auto;
     max-width: 800px;
-    margin-bottom: 100px; /* Added margin below to prevent overlap with the footer */
+    margin-bottom: 100px;
 }
 
 
