--- a/src/styles/CarDetail.module.css
+++ b/src/styles/CarDetail.module.css
@@ -49,7 +49,8 @@
 .car-info,
 .features,
 .rent-dates {
-  padding: 20px;
+  padding: 10px;
+  margin-bottom: 10px;
   background-color: #f9f9f9;
 }
 
@@ -89,8 +90,8 @@
   display: block;
   width: 90%;
   max-width: 300px;
-  margin: 20px auto;
-  padding: 14px 24px;
+  margin: 35px auto;
+  padding: 10px 20px;
   background: linear-gradient(135deg, #2980b9 0%, #2c3e50 100%);
   color: white;
   border: none;
